<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Flare</string>
    <string name="title_activity_maps">Flare</string>
    <string name="hourglass">⌛</string>
    <string name="watch">\u231A</string>
    <string name="backarrow">\u2190</string>
    <string name="selectfriends">Select Friends</string>
    <string name="profile">Profile</string>
    <string name="editprofilepic">Select New Profile Picture</string>
    <string name="displayname">Display Name</string>
    <string name="exampleemail">kwdougla@gmail.com</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="addFriends">Type Names or Circles</string>
    <string name="X">x</string>
    <string name="menu">\u2261</string>
    <string name="pencil">\u270E</string>
    <!--<string name="person">\u263A</string>-->
    <!--<string name="person">\u2388</string>-->
    <!--<string name="person">\u1F527</string>-->
    <!--<string name="person">\u26C4</string>-->
    <!--<string name="person">\u2699</string>-->
    <!--<string name="person">\u229B</string>-->
    <string name="person">\u25C9</string>
    <string name="gear">⚙</string>
    <string name="welcome">Welcome to Flare</string>
    <string name="login">Log In</string>
    <string name="createnewaccount">New User? Get Flare</string>
    <string name="sampleemail">your@email.com</string>

    <!--<string name="person">\u26F9</string>-->
    <string name="circle">o</string>
    <string name="share">Share Location</string>
    <string name="duration">Duration: </string>
    <string name="frequency">Interval:</string>
    <string name="logout">Log Out</string>
    <string-array
        name="leftmenu">
        <item>Share Location</item>
        <item>Friends</item>
        <item>Circles</item>
        <item>Drop/Remove Pin</item>
    </string-array>
    <string name="title_activity_edit_profile">editProfileActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">loginActivity</string>
    <string name="title_activity_addfriends">addFriendsActivity</string>
    <string name="title_activity_newfriends">newFriendsActivity</string>
    <string name="title_activity_new_user">newUserActivity</string>
    <string name="title_activity_circles">circlesActivity</string>
    <string name="title_activity_newcircle">newcircleActivity</string>
</resources>
