<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/back_butt"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/backarrow"
            android:textColor="#fff"
            android:padding="15dp"
            android:fontFamily="sans-serif-thin"
            android:textStyle="bold"
            android:textSize="34sp"
            android:background="@drawable/button_red"
            android:layout_gravity="left"/>

        <Button
            android:id="@+id/editProfile_butt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editprofile"
            android:textColor="#fff"
            android:padding="15dp"
            android:fontFamily="sans-serif-thin"
            android:textStyle="bold"
            android:textSize="34sp"
            android:background="@drawable/button_red"
            android:layout_gravity="right"/>

    </LinearLayout>

    <TextView
        android:paddingTop="55dp"
        android:paddingBottom="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/editprofilepic"
        android:id="@+id/editProPicText"
        android:layout_gravity="center_horizontal" />

    <ImageButton
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="fitXY"
        android:id="@+id/editProPic"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/circle_plus" />

    <EditText
        android:paddingTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/displayname"
        android:ems="10"
        android:id="@+id/editDisplayName"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:id="@+id/editUsername"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:text="@string/password"
        android:ems="10"
        android:id="@+id/editPassword"
        android:layout_gravity="center_horizontal" />

</LinearLayout>