<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff"
    android:textColor="#FFF">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/back_butt"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/backarrow"
            android:textColor="#fff"
            android:padding="15dp"
            android:textSize="34sp"
            android:background="@drawable/button_red"
            android:layout_gravity="right"/>

        <TextView
            android:id="@+id/makeProfile_butt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="Make a Spark"
            android:textColor="#fff"
            android:gravity="center"
            android:padding="15dp"
            android:textSize="34sp"
            android:background="@drawable/button_true_red"
            android:layout_weight="0.5" />

    </LinearLayout>

    <TextView
        android:paddingTop="46dp"
        android:paddingBottom="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Take a Selfie"
        android:id="@+id/editProPicText"
        android:textColor="#55F"
        android:layout_gravity="center_horizontal" />

    <ImageButton
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="fitXY"
        android:id="@+id/editProPic"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/unknownuser" />

    <EditText
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/sampleemail"
        android:textColor="#55F"
        android:textColorHint="#55F"
        android:background="@drawable/edit_text_background"
        android:gravity="center"
        android:ems="10"
        android:id="@+id/editEmail"
        android:imeOptions="actionNext"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textColor="#55F"
        android:textColorHint="#55F"
        android:background="@drawable/edit_text_background"
        android:hint="@string/displayname"
        android:gravity="center"
        android:ems="10"
        android:id="@+id/editDisplayName"
        android:imeOptions="actionNext"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#55F"
        android:textColorHint="#55F"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_background"
        android:hint="@string/password"
        android:gravity="center"
        android:ems="10"
        android:id="@+id/editPassword"
        android:imeOptions="actionDone"
        android:layout_gravity="center_horizontal" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <Button
            android:id="@+id/finishNewUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Join the Fire"
            android:textColor="#fff"
            android:padding="15dp"
            android:textSize="24sp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/button_red" />

    </RelativeLayout>

</LinearLayout>