<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/transparent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/backButton"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/backarrow"
            android:textColor="#fff"
            android:padding="15dp"
            android:fontFamily="sans-serif-thin"
            android:textStyle="bold"
            android:textSize="34sp"
            android:background="@drawable/button_red"
            android:layout_gravity="left"/>
        <Button
            android:id="@+id/selectFriendsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:textColor="#fff"
            android:padding="15dp"
            android:fontFamily="sans-serif-thin"
            android:textStyle="bold"
            android:textSize="34sp"
            android:background="@drawable/button_true_red"
            android:layout_gravity="right"/>

    </LinearLayout>

    android:imeOptions="actionDone"

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <TableLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/shareButton"
            android:background="#ffdcdcdc"
            android:layout_alignParentStart="true">

            <TableRow
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/duration"
                    android:id="@+id/textView"
                    android:layout_column="0" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/durationSetting"
                    android:text="60 m"
                    android:gravity="right"
                    android:layout_column="1" />

                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/seekBarDuration"
                    android:max="119"
                    android:progress="59"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:layout_column="2" />

            </TableRow>
            <TableRow
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/frequency"
                    android:id="@+id/textView2"
                    android:layout_column="0" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/frequencySetting"
                    android:text="1 m"
                    android:gravity="right"
                    android:layout_column="1" />

                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/seekBarFrequency"
                    android:max="100"
                    android:progress="40"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:layout_column="2" />
            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/shareButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:textColor="#fff"
            android:padding="15dp"
            android:fontFamily="sans-serif-thin"
            android:textStyle="bold"
            android:textSize="24sp"
            android:background="@drawable/button_red"
            android:layout_gravity="center"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

</LinearLayout>
